--- a/.github/workflows/build-apk-localdesktop.yml
+++ b/.github/workflows/build-apk-localdesktop.yml
@@ -194,5 +194,5 @@ jobs:
         with:
           P12_KEYSTORE_PATH: "./localdesktop_source/${{ env.ANDROID_KEYSTORE_PATH }}"
           ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
-          BUILD_ARTIFACT_PATH: "$./dist/localdesktop-${{ env.BUILD_DATE }}.apk"
+          BUILD_ARTIFACT_PATH: "./dist/localdesktop-${{ env.BUILD_DATE }}.apk"
           RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-localdesktop"
