--- a/.github/workflows/build-apk-blbl.yml
+++ b/.github/workflows/build-apk-blbl.yml
@@ -24,7 +24,7 @@ permissions:
   contents: write
 
 jobs:
-  build-release:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Clean runner environment
