--- a/.github/workflows/build-apk-github-store.yml
+++ b/.github/workflows/build-apk-github-store.yml
@@ -6,6 +6,7 @@ on:
 
 env:
   JDK_VERSION: '21'
+  JDK_DISTRIBUTION: 'temurin'
   ANDROID_COMPILE_SDK: '36'
   ANDROID_BUILD_TOOLS: '36.0.0'
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
@@ -43,7 +44,7 @@ jobs:
       - uses: actions/setup-java@main
         with:
           java-version: "${{ env.JDK_VERSION }}"
-          distribution: "temurin"
+          distribution: "${{ env.JDK_DISTRIBUTION }}"
 
       - name: Decode keystore
         working-directory: ./ghstore_source
@@ -53,39 +54,27 @@ jobs:
 
       - name: Build release apk
         working-directory: ./ghstore_source
+        run: |
+          chmod +x ./gradlew
+          ./gradlew assembleRelease
+
+      - name: Sign the apk (pkcs12)
+        working-directory: ./ghstore_source
         env:
           ANDROID_KEYSTORE_PATH: "./ghstore_source/release.keystore"
           ANDROID_STORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
           ANDROID_KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-          ANDROID_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: |
-          chmod +x ./gradlew
-          ./gradlew assembleRelease
+          export ANDROID_HOME=/usr/local/lib/android/sdk
+          export PATH="$ANDROID_HOME/build-tools/35.0.0:$PATH"
           mkdir -p "${{ github.workspace }}/dist"
-          # mv ./app/build/outputs/apk/release/app-release.apk "${{ github.workspace }}/dist/github-store-${{ env.BUILD_DATE }}.apk"
-          # 查找APK文件并复制到dist目录
-          APK_FILE=$(find composeApp/build/outputs/apk/release -name "*.apk" 2>/dev/null | head -1)
-          if [ -n "$APK_FILE" ]; then
-            APK_NAME=$(basename "$APK_FILE")
-            echo "✅ 找到APK文件: $APK_FILE"
-            echo "📄 复制APK文件到: ${{ github.workspace }}/dist/github-store-${{ env.BUILD_DATE }}.apk"
-            cp "$APK_FILE" "${{ github.workspace }}/dist/github-store-${{ env.BUILD_DATE }}.apk"
-            # 验证文件已复制
-            if [ -f "${{ github.workspace }}/dist/github-store-${{ env.BUILD_DATE }}.apk" ]; then
-              echo "✅ APK文件复制成功！"
-              ls -la "${{ github.workspace }}/dist/"
-            else
-              echo "❌ APK文件复制失败！"
-            fi
-          else
-            echo "❌ 未找到APK文件！"
-            echo "📁 搜索目录结构:"
-            find . -name "*.apk" -type f 2>/dev/null || echo "未找到任何APK文件"
-            echo "📁 composeApp目录结构:"
-            find composeApp/build -type f -name "*.apk" 2>/dev/null || echo "composeApp目录中未找到APK文件"
-          fi
-        shell: bash
-
+          apksigner sign \
+            --ks "${{ env.ANDROID_KEYSTORE_PATH }}" \
+            --ks-pass "pass:${{ env.ANDROID_STORE_PASSWORD }}" \
+            --ks-key-alias "${{ env.ANDROID_KEY_ALIAS }}" \
+            --ks-type PKCS12 \
+            --out "${{ github.workspace }}/dist/github-store-${{ env.BUILD_DATE }}.apk" \
+            "./composeApp/build/outputs/apk/release/composeApp-release-unsigned.apk"
 
       - name: Erase keystore, encrypt package and create release
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
