--- a/.github/workflows/build-apk-github-store.yml
+++ b/.github/workflows/build-apk-github-store.yml
@@ -50,7 +50,7 @@ jobs:
         working-directory: ./ghstore_source
         run: |
           mkdir -p ./keystore
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > ./keystore/release.keystore
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > ./keystore/keystore.p12
 
       - name: Build release apk
         working-directory: ./ghstore_source
@@ -61,7 +61,7 @@ jobs:
       - name: Sign the apk (pkcs12)
         working-directory: ./ghstore_source
         env:
-          ANDROID_KEYSTORE_PATH: "./ghstore_source/keystore/release.keystore"
+          ANDROID_KEYSTORE_PATH: "./keystore/keystore.p12"
           ANDROID_STORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
           ANDROID_KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
         run: |
@@ -80,7 +80,7 @@ jobs:
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
           # 文件路径为基于github.workspace的绝对路径
-          P12_KEYSTORE_PATH: "./ghstore_source/keystore/release.keystore"
+          P12_KEYSTORE_PATH: "./ghstore_source/keystore/keystore.p12"
           ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
           BUILD_ARTIFACT_PATH: "./dist/github-store-${{ env.BUILD_DATE }}.apk"
           RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-github-store"
