--- a/.github/workflows/build-apk-github-store.yml
+++ b/.github/workflows/build-apk-github-store.yml
@@ -42,7 +42,7 @@ jobs:
           echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
 
       - name: Setup java
-      - uses: actions/setup-java@main
+        uses: actions/setup-java@main
         with:
           java-version: "${{ env.JDK_VERSION }}"
           distribution: "${{ env.JDK_DISTRIBUTION }}"
