--- a/.github/workflows/build-apk-xed-editor.yml
+++ b/.github/workflows/build-apk-xed-editor.yml
@@ -59,19 +59,10 @@ jobs:
         run: git submodule update --init --recursive
 
       - name: Build release apk files
-        # 增加超时时间
-        timeout-minutes: 30
         working-directory: ./xed_editor_source
         run: |
           chmod +x ./gradlew
-          # ./gradlew assembleRelease --no-daemon -Pandroid.ndk.abiFilters=arm64-v8a
-          # 添加重试和超时参数
-          ./gradlew assembleRelease \
-            --no-daemon \
-            -Pandroid.ndk.abiFilters=arm64-v8a \
-            --build-cache \
-            --configure-on-demand \
-            --parallel
+          ./gradlew assembleRelease --no-daemon -Pandroid.ndk.abiFilters=arm64-v8a
           mkdir -p ./release-apks
           mv ./app/build/outputs/apk/release/*.apk ./release-apks/xed-editor-${{env.BUILD_DATE}}.apk
 
