--- a/.github/workflows/sync-fork-bilibili-xqqv5.yml
+++ b/.github/workflows/sync-fork-bilibili-xqqv5.yml
@@ -1,41 +1,27 @@
-name: sync-fork-update-branch
+name: sync-fork-bilibili-xqqv5
 
 on:
   schedule:
-    # 每12小时检查一次
-    - cron: '0 */12 * * *'
-  workflow_dispatch: # 支持手动触发
+    - cron: '0 12 * * *' # 每天中午12点定时触发
+  workflow_dispatch:
 
 jobs:
   sync-forks:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # 定义源仓库与你的Fork仓库的映射关系
+        # 定义源仓库与Fork仓库的映射关系
         repo_pair:
-          - source: Acode-Foundation/Acode
-            fork: zxgv5/a-Acode
-          - source: Xed-Editor/Xed-Editor
-            fork: zxgv5/a-Xed-Editor
-          - source: bggRGjQaUbCoE/PiliPlus
-            fork: zxgv5/a-PiliPlus
-          - source: wgtunnel/wgtunnel
-            fork: zxgv5/a-wgtunnel
-          - source: fantasytyx/bv
-            fork: zxgv5/a-fantasy-bv
-          - source: cat3399/blbl
-            fork: zxgv5/a-blbl
-          - source: T8RIN/ImageToolbox
-            fork: zxgv5/a-ImageToolbox
-          - source: rainxchzed/Github-Store
-            fork: zxgv5/a-Github-Store
-          - source: MuntashirAkon/AppManager
-            fork: zxgv5/a-AppManager
+          - source: leonwu85/bv
+            fork: xqqv5/leonwu85-bv
+          - source: kkkunny/bilitv
+            fork: xqqv5/bilitv
+          - source: kkkunny/bilitv
+            fork: xqqv5/HyperBeast-BiliTV
 
     steps:
       - name: Checkout ci repository
-        # 修正：使用正式版本号
-        uses: actions/checkout@v4
+        uses: actions/checkout@main
 
       - name: Setup git and gh
         run: |
@@ -44,31 +30,24 @@ jobs:
           # 安装 GitHub CLI 用于查询仓库默认分支
           type -p gh >/dev/null || sudo apt-get install -y gh
 
-      - name: Sync ${{ matrix.repo_pair.source }} (Default Branch)
+      - name: Sync ${{ matrix.repo_pair.source }} - default branch
         env:
           SOURCE_REPO: ${{ matrix.repo_pair.source }}
           FORK_REPO: ${{ matrix.repo_pair.fork }}
-          GH_TOKEN: ${{ secrets.SYNC_FORK_TOKEN }}
+          GH_TOKEN: ${{ secrets.SYNC_FORK_TOKEN_NO_01_AT_XQQV5 }}
         run: |
-          echo "=========================================="
-          echo "开始同步：上游 [$SOURCE_REPO] -> 镜像 [$FORK_REPO]"
-          echo "=========================================="
-
           # 1. 获取源仓库的默认分支名
           echo "步骤1：获取源仓库默认分支..."
           DEFAULT_BRANCH=$(gh api "repos/$SOURCE_REPO" --jq '.default_branch')
           echo "默认分支为: $DEFAULT_BRANCH"
-
           # 2. 克隆 Fork 仓库（完整克隆，非裸仓库，更简单）
           echo "步骤2：克隆镜像仓库..."
           git clone --depth=1 --branch="$DEFAULT_BRANCH" "https://${GH_TOKEN}@github.com/${FORK_REPO}.git" sync-repo
           cd sync-repo
-
           # 3. 添加上游源仓库并拉取默认分支更新
           echo "步骤3：拉取上游更新..."
           git remote add upstream "https://github.com/${SOURCE_REPO}.git"
           git fetch upstream "$DEFAULT_BRANCH"
-
           # 4. 检查是否有新提交
           echo "步骤4：检查差异..."
           if git diff --quiet FETCH_HEAD "$DEFAULT_BRANCH"; then
@@ -80,12 +59,7 @@ jobs:
             git push origin "$DEFAULT_BRANCH"
             echo "默认分支 [$DEFAULT_BRANCH] 同步完成。"
           fi
-
           # 6. 清理
           echo "步骤5：清理..."
           cd ..
           rm -rf sync-repo
-
-          echo "=========================================="
-          echo "仓库 [$SOURCE_REPO] 同步完成！"
-          echo "=========================================="
