--- a/.github/workflows/sync-fork-bilibili-xqqv5.yml
+++ b/.github/workflows/sync-fork-bilibili-xqqv5.yml
@@ -36,12 +36,20 @@ jobs:
           FORK_REPO: ${{ matrix.repo_pair.fork }}
           GH_TOKEN: ${{ secrets.SYNC_FORK_TOKEN_NO_01_AT_XQQV5 }}
         run: |
-          # 1. 获取源仓库的默认分支名
+          # 1. 使用 git ls-remote 获取源仓库的默认分支名
           echo "步骤1：获取源仓库默认分支..."
-          DEFAULT_BRANCH=$(gh api "repos/$SOURCE_REPO" --jq '.default_branch')
+          # 查询上游仓库的HEAD引用，它指向默认分支
+          DEFAULT_BRANCH_INFO=$(git ls-remote --symref "https://github.com/${SOURCE_REPO}.git" HEAD)
+          # 从输出中提取分支名（例如：ref: refs/heads/main  HEAD）
+          DEFAULT_BRANCH=$(echo "$DEFAULT_BRANCH_INFO" | awk '/^ref:/ {sub(/refs\/heads\//, "", $2); print $2; exit}')
+          if [ -z "$DEFAULT_BRANCH" ]; then
+            # 备用方案：如果上述方法失败，尝试另一种解析方式
+            DEFAULT_BRANCH=$(echo "$DEFAULT_BRANCH_INFO" | grep -o 'refs/heads/[^ 	]*' | head -1 | sed 's|refs/heads/||')
+          fi
           echo "默认分支为: $DEFAULT_BRANCH"
-          # 2. 克隆 Fork 仓库（完整克隆，非裸仓库，更简单）
+          # 2. 克隆 Fork 仓库（浅克隆，指定默认分支）
           echo "步骤2：克隆镜像仓库..."
+          # 先尝试克隆指定分支，如果分支不存在则退出
           git clone --depth=1 --branch="$DEFAULT_BRANCH" "https://${GH_TOKEN}@github.com/${FORK_REPO}.git" sync-repo
           cd sync-repo
           # 3. 添加上游源仓库并拉取默认分支更新
@@ -50,6 +58,7 @@ jobs:
           git fetch upstream "$DEFAULT_BRANCH"
           # 4. 检查是否有新提交
           echo "步骤4：检查差异..."
+          # 比较上游拉取的内容与本地分支
           if git diff --quiet FETCH_HEAD "$DEFAULT_BRANCH"; then
             echo "默认分支 [$DEFAULT_BRANCH] 已是最新，无需同步。"
           else
