--- a/.github/workflows/sync-fork-bilibili.yml
+++ b/.github/workflows/sync-fork-bilibili.yml
@@ -76,6 +76,6 @@ jobs:
             echo "5、清理..."
             cd ..
             rm -rf sync-repo
-            echo "$SOURCE_REPO 同步完成"
+            echo -e "$SOURCE_REPO 同步完成\n"
             sleep 1
           done
