--- a/.github/workflows/build-apk-musicfree.yml
+++ b/.github/workflows/build-apk-musicfree.yml
@@ -60,7 +60,7 @@ jobs:
         working-directory: ./musicfree_source
         run: |
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > android/app/release.keystore
-          cat > android/keystore.properties << 'EOF'
+          cat > android/keystore.properties << EOF
           RELEASE_STORE_FILE=release.keystore
           RELEASE_STORE_PASSWORD=${{ secrets.STORE_PASSWORD }}
           RELEASE_KEY_ALIAS=${{ secrets.KEY_ALIAS }}
