--- a/.github/workflows/build-apk-musicfree.yml
+++ b/.github/workflows/build-apk-musicfree.yml
@@ -1,18 +1,18 @@
 name: build-apk-musicfree
-
+ 
 on:
   workflow_dispatch:
   workflow_call:
-
+ 
 env:
   JDK_VERSION: '17'
   ANDROID_COMPILE_SDK: '36'
   ANDROID_BUILD_TOOLS: '36.0.0'
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-
+ 
 permissions:
   contents: write
-
+ 
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,7 +22,7 @@ jobs:
           # 清理可能存在的全局缓存文件
           rm -rf ~/.gradle/caches/transforms-*
           rm -rf ~/.android/build-cache/
-
+ 
       - name: Checkout source repo
         uses: actions/checkout@main
         with:
@@ -31,50 +31,64 @@ jobs:
           # ref: dev
           path: musicfree_source
           fetch-depth: 0
-
+ 
       - name: Checkout ci source repo (self)
         uses: actions/checkout@main
         with:
           path: ci_source
-
+ 
       - name: Initialization values
         run: |
           echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
-
+ 
       - name: Setup java
         uses: actions/setup-java@main
         with:
           java-version: "${{ env.JDK_VERSION }}"
           distribution: "temurin"
-
+ 
       - name: Setup node.js
         uses: actions/setup-node@main
         with: 
           node-version: 20
-
+ 
       - name: Install dependencies
         working-directory: ./musicfree_source
         run: npm ci --prefer-offline --no-audit      
 
-      - name: Setup keystore
+      - name: Decode keystore
         working-directory: ./musicfree_source
         run: |
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > android/app/release.keystore
-          cat > android/keystore.properties << EOF
-          RELEASE_STORE_FILE=./app/release.keystore
-          RELEASE_STORE_PASSWORD=${{ secrets.STORE_PASSWORD }}
-          RELEASE_KEY_ALIAS=${{ secrets.KEY_ALIAS }}
-          RELEASE_KEY_PASSWORD=${{ secrets.STORE_PASSWORD }}
-          EOF
-          chmod 600 android/keystore.properties android/app/release.keystore
 
+      # - name: Setup keystore
+      #   working-directory: ./musicfree_source
+      #   env:
+      #     RELEASE_STORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+      #     RELEASE_KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+      #     RELEASE_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+        # run: |
+          # echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > android/app/release.keystore
+          # cat > android/keystore.properties << EOF
+          # RELEASE_STORE_FILE=./app/release.keystore
+          # RELEASE_STORE_PASSWORD=${{ secrets.STORE_PASSWORD }}
+          # RELEASE_KEY_ALIAS=${{ secrets.KEY_ALIAS }}
+          # RELEASE_KEY_PASSWORD=${{ secrets.STORE_PASSWORD }}
+          # EOF
+          # chmod 600 android/keystore.properties android/app/release.keystore
+ 
       - name: Build apk
         working-directory: ./musicfree_source/android
+        env:
+          RELEASE_STORE_FILE=./app/release.keystore
+          RELEASE_STORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          RELEASE_KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          RELEASE_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: | 
           chmod +x ./gradlew
           # ./gradlew assembleRelease --parallel --build-cache --configure-on-demand
           ./gradlew assembleRelease -Pandroid.injected.abiFilters=arm64-v8a
-
+ 
       - name: List generated apk
         working-directory: ./musicfree_source
         run: |
