--- a/.github/workflows/build-apk-musicfree.yml
+++ b/.github/workflows/build-apk-musicfree.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Build apk
         working-directory: ./musicfree_source/android
         env:
-          RELEASE_STORE_FILE=./app/release.keystore
+          RELEASE_STORE_FILE: "./app/release.keystore"
           RELEASE_STORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
           RELEASE_KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           RELEASE_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
